[gd_scene load_steps=18 format=2]

[ext_resource path="res://Fonts/RobotoMono 96.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/RobotoMono 48.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/UI/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Images/Bird/default2.png" type="Texture" id=4]
[ext_resource path="res://Images/Bird/Pink.png" type="Texture" id=5]
[ext_resource path="res://Images/Bird/Red.png" type="Texture" id=6]
[ext_resource path="res://Images/Bird/Blue.png" type="Texture" id=7]
[ext_resource path="res://Images/Bird/Green.png" type="Texture" id=8]
[ext_resource path="res://Images/Bird/Rabbit.png" type="Texture" id=9]
[ext_resource path="res://Scenes/background/ParallaxBg.gd" type="Script" id=10]
[ext_resource path="res://Scenes/background/scroll_bg_sky.png" type="Texture" id=11]
[ext_resource path="res://Scenes/background/scroll_bg_cloud_3.png" type="Texture" id=12]
[ext_resource path="res://Scenes/background/scroll_bg_cloud_1.png" type="Texture" id=13]
[ext_resource path="res://Scenes/background/scroll_bg_fg_1.png" type="Texture" id=14]
[ext_resource path="res://Scenes/background/scroll_bg_fg_2.png" type="Texture" id=15]
[ext_resource path="res://Scenes/background/scroll_bg_cloud_2.png" type="Texture" id=16]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 0 )

[node name="Mainmenu" type="Node"]

[node name="MainMenu" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="MainMenu"]
margin_top = -50.8168
margin_right = 1024.0
margin_bottom = 681.183
rect_scale = Vector2( 1.3, 1.3 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 722.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="MainMenu/PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 964.0
margin_bottom = 672.0
custom_constants/separation = 70

[node name="Title" type="Label" parent="MainMenu/PanelContainer/MarginContainer/Rows"]
margin_right = 924.0
margin_bottom = 128.0
custom_colors/font_color = Color( 0.12549, 1, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Flappy Bird"
align = 1

[node name="Row" type="VBoxContainer" parent="MainMenu/PanelContainer/MarginContainer/Rows"]
margin_top = 198.0
margin_right = 924.0
margin_bottom = 602.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MainMenu/PanelContainer/MarginContainer/Rows/Row"]
margin_right = 924.0
margin_bottom = 404.0

[node name="Rows" type="VBoxContainer" parent="MainMenu/PanelContainer/MarginContainer/Rows/Row/CenterContainer"]
margin_left = 340.0
margin_right = 584.0
margin_bottom = 404.0
custom_constants/separation = 40

[node name="PlayButton" type="Button" parent="MainMenu/PanelContainer/MarginContainer/Rows/Row/CenterContainer/Rows"]
margin_right = 244.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 2 )
text = "  Play  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfiniteButton" type="Button" parent="MainMenu/PanelContainer/MarginContainer/Rows/Row/CenterContainer/Rows"]
margin_top = 111.0
margin_right = 244.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 2 )
text = "Infinite"

[node name="OptionsButton" type="Button" parent="MainMenu/PanelContainer/MarginContainer/Rows/Row/CenterContainer/Rows"]
margin_top = 222.0
margin_right = 244.0
margin_bottom = 293.0
custom_fonts/font = ExtResource( 2 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit Button" type="Button" parent="MainMenu/PanelContainer/MarginContainer/Rows/Row/CenterContainer/Rows"]
margin_top = 333.0
margin_right = 244.0
margin_bottom = 404.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[node name="SpriteButton" type="Button" parent="MainMenu"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 948.348
margin_top = 305.873
margin_right = 1254.35
margin_bottom = 521.873
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yellow" type="Sprite" parent="."]
position = Vector2( 1101.35, 413.873 )
scale = Vector2( 0.18, 0.18 )
z_index = 2
texture = ExtResource( 4 )

[node name="Green" type="Sprite" parent="."]
visible = false
position = Vector2( 1101.35, 413.873 )
scale = Vector2( 0.18, 0.18 )
z_index = 2
texture = ExtResource( 8 )

[node name="Red" type="Sprite" parent="."]
visible = false
position = Vector2( 1101.35, 413.873 )
scale = Vector2( 0.18, 0.18 )
z_index = 2
texture = ExtResource( 6 )

[node name="Blue" type="Sprite" parent="."]
visible = false
position = Vector2( 1101.35, 413.873 )
scale = Vector2( 0.18, 0.18 )
z_index = 2
texture = ExtResource( 7 )

[node name="Pink" type="Sprite" parent="."]
visible = false
position = Vector2( 1101.35, 413.873 )
scale = Vector2( 0.18, 0.18 )
z_index = 2
texture = ExtResource( 5 )

[node name="Rabbit" type="Sprite" parent="."]
visible = false
position = Vector2( 1101.35, 413.873 )
scale = Vector2( 0.18, 0.18 )
z_index = 2
texture = ExtResource( 9 )

[node name="ParallaxBg" type="ParallaxBackground" parent="."]
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )
scroll_base_scale = Vector2( 0.7, 0 )
script = ExtResource( 10 )

[node name="Sky" type="ParallaxLayer" parent="ParallaxBg"]
motion_mirroring = Vector2( 400, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBg/Sky"]
scale = Vector2( 1000, 2 )
texture = ExtResource( 11 )
centered = false
offset = Vector2( -15, 0 )

[node name="Clouds" type="ParallaxLayer" parent="ParallaxBg"]
motion_mirroring = Vector2( 800, 100 )

[node name="Sprite1" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 14, 64 )
texture = ExtResource( 13 )
centered = false

[node name="Sprite2" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 202, 12 )
texture = ExtResource( 13 )
centered = false

[node name="Sprite3" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 77, 23 )
texture = ExtResource( 16 )
centered = false

[node name="Sprite4" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 272, 65 )
texture = ExtResource( 16 )
centered = false

[node name="Sprite5" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 127, 79 )
texture = ExtResource( 12 )
centered = false

[node name="Sprite6" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 337, 35 )
texture = ExtResource( 12 )
centered = false

[node name="Sprite7" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 428.25, 64 )
texture = ExtResource( 13 )
centered = false

[node name="Sprite8" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 616.25, 12 )
texture = ExtResource( 13 )
centered = false

[node name="Sprite9" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 491.25, 23 )
texture = ExtResource( 16 )
centered = false

[node name="Sprite10" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 686.25, 65 )
texture = ExtResource( 16 )
centered = false

[node name="Sprite11" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 541.25, 79 )
texture = ExtResource( 12 )
centered = false

[node name="Sprite12" type="Sprite" parent="ParallaxBg/Clouds"]
position = Vector2( 751.25, 35 )
texture = ExtResource( 12 )
centered = false

[node name="Mount2" type="ParallaxLayer" parent="ParallaxBg"]
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 3140, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBg/Mount2"]
position = Vector2( 0, 300 )
texture = ExtResource( 15 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite2" type="Sprite" parent="ParallaxBg/Mount2"]
position = Vector2( 391.165, 300 )
texture = ExtResource( 15 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite7" type="Sprite" parent="ParallaxBg/Mount2"]
position = Vector2( -775.696, 300 )
texture = ExtResource( 15 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite8" type="Sprite" parent="ParallaxBg/Mount2"]
position = Vector2( -384.531, 300 )
texture = ExtResource( 15 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite3" type="Sprite" parent="ParallaxBg/Mount2"]
position = Vector2( 783.25, 300 )
texture = ExtResource( 15 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite4" type="Sprite" parent="ParallaxBg/Mount2"]
position = Vector2( 1174.41, 300 )
texture = ExtResource( 15 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite5" type="Sprite" parent="ParallaxBg/Mount2"]
position = Vector2( 1564.6, 300 )
texture = ExtResource( 15 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite6" type="Sprite" parent="ParallaxBg/Mount2"]
position = Vector2( 1955.77, 300 )
texture = ExtResource( 15 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Mount1" type="ParallaxLayer" parent="ParallaxBg"]
motion_scale = Vector2( 0.4, 1 )
motion_mirroring = Vector2( 3250, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBg/Mount1"]
position = Vector2( 14, 300 )
texture = ExtResource( 14 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite2" type="Sprite" parent="ParallaxBg/Mount1"]
position = Vector2( 428.25, 300 )
texture = ExtResource( 14 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite7" type="Sprite" parent="ParallaxBg/Mount1"]
position = Vector2( -797.759, 300 )
texture = ExtResource( 14 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite8" type="Sprite" parent="ParallaxBg/Mount1"]
position = Vector2( -383.509, 300 )
texture = ExtResource( 14 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite3" type="Sprite" parent="ParallaxBg/Mount1"]
position = Vector2( 830.788, 300 )
texture = ExtResource( 14 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite4" type="Sprite" parent="ParallaxBg/Mount1"]
position = Vector2( 1224.41, 300 )
texture = ExtResource( 14 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite5" type="Sprite" parent="ParallaxBg/Mount1"]
position = Vector2( 1638.66, 300 )
texture = ExtResource( 14 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[node name="Sprite6" type="Sprite" parent="ParallaxBg/Mount1"]
position = Vector2( 2041.2, 300 )
texture = ExtResource( 14 )
centered = false
region_rect = Rect2( 0, 0, 400, 128 )

[connection signal="pressed" from="MainMenu/PanelContainer/MarginContainer/Rows/Row/CenterContainer/Rows/PlayButton" to="MainMenu" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MainMenu/PanelContainer/MarginContainer/Rows/Row/CenterContainer/Rows/InfiniteButton" to="MainMenu" method="_on_InfiniteButton_pressed"]
[connection signal="pressed" from="MainMenu/PanelContainer/MarginContainer/Rows/Row/CenterContainer/Rows/OptionsButton" to="MainMenu" method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MainMenu/PanelContainer/MarginContainer/Rows/Row/CenterContainer/Rows/Quit Button" to="MainMenu" method="_on_Quit_Button_pressed"]
[connection signal="pressed" from="MainMenu/SpriteButton" to="MainMenu" method="_on_SpriteButton_pressed"]
